--- a/contato.html
+++ b/contato.html
@@ -106,7 +106,9 @@
                 </div>
 
 
-                <form action="https://formspree.io/f/mpqdadel" method="POST" class="contact-form">
+                <form action="https://formspree.io/f/mpqdadel"
+                    method="POST" class="contact-form">
+
                     <div class="contact-cta">
                         <h2>Pronto para fazer negócio?</h2>
                         <p>Nossa equipe comercial está pronta para atender você com agilidade e especialização técnica.</p>
@@ -164,7 +166,7 @@
     </footer>
 
     <!-- WhatsApp Flutuante -->
-    <a href="https://wa.me/5562981604359" target="_blank" class="whatsapp-float" aria-label="WhatsApp">
+    <a add . href="https://wa.me/5562981604359" target="_blank" class="whatsapp-float" aria-label="WhatsApp">
          <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
             <circle cx="30" cy="30" r="30" fill="#25D366"/>
             <path d="M30.5 15C22.5 15 16 21.5 16 29.5C16 32.3 16.9 34.9 18.4 37L16.2 44.8L24.3 42.7C26.3 44 28.8 44.8 31.5 44.8C39.5 44.8 46 38.3 46 30.3C46 22.3 39.5 15 30.5 15ZM39.3 36.8C39 37.7 37.5 38.5 36.7 38.7C36.1 38.8 35.3 38.9 34.4 38.6C33.9 38.4 33.2 38.1 32.3 37.7C28.3 35.9 25.7 31.8 25.5 31.5C25.3 31.2 23.8 29.2 23.8 27.1C23.8 25 24.9 23.9 25.3 23.5C25.7 23.1 26.1 23 26.4 23C26.6 23 26.8 23 27 23C27.2 23 27.5 22.9 27.8 23.6C28.1 24.3 28.8 26.4 28.9 26.6C29 26.8 29.1 27 29 27.2C28.9 27.4 28.8 27.6 28.6 27.8C28.4 28 28.2 28.3 28.1 28.4C27.9 28.6 27.7 28.8 27.9 29.1C28.1 29.5 28.8 30.6 29.8 31.5C31.1 32.6 32.2 33 32.5 33.1C32.8 33.2 33.1 33.2 33.3 32.9C33.5 32.6 34.2 31.8 34.4 31.5C34.6 31.2 34.9 31.2 35.2 31.3C35.5 31.4 37.6 32.4 37.9 32.6C38.2 32.8 38.4 32.9 38.5 33C38.6 33.3 38.6 34 38.3 34.8Z" fill="white"/>
