Atualização do site

--- a/downloads.html
+++ b/downloads.html
@@ -76,7 +76,12 @@
         <div class="container">
             <div class="form-wrapper">
                 <h2>Acesse o catálogo técnico completo</h2>
-                <form id="download-form" class="download-form">
+                <form 
+                        id="download-form"
+                        class="download-form"
+                        action="https://formspree.io/f/mpqdadel" 
+                        method="POST"
+                    >   
                     <div class="form-group">
                         <label for="nome">Nome Completo *</label>
                         <input type="text" id="nome" name="nome" required>
