Atualização do site

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         <div class="container">
             <div class="hero-content">
                 <h1>Distribuidora de Peças Automotivas para Suspensão no Ceará</h1>
-                <p class="hero-subtitle">Atendimento exclusivo B2B com linha completa de buchas, bieletas e componentes de suspensão automotiva.</p>
+                <p class="hero-subtitle">Distribuidora de peças automotivas com foco em suspensão, freios e componentes essenciais
+Atendendo Ceará e região com qualidade e procedência garantida.</p>
                 <div class="hero-buttons">
                     <a href="/downloads.html" class="btn btn-primary">Acessar Catálogo</a>
                     <a href="https://wa.me/5562981604359" target="_blank" class="btn btn-secondary">Falar com um Consultor</a>
